kustomization/overlays/experimental/nextcloud/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-caldav-and-carddav-middleware@kubernetescrd,nextcloud-webfinger-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: nextcloud-ingress
spec:
  rules:
    - host: nextcloud.tswn.us
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  name: http
            path: /
            pathType: Prefix
